# torchtitan-npu-upstream

./: .clang-format  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  OAT.xml  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.agents/: AGENTS.md  README.md  setup_agent.sh
.agents/rules/: config.md  converters.md  models.md  patches.md
.agents/skills/accuracy-debug/: SKILL.md
.agents/skills/default-skills/: SKILL.md
.agents/skills/oom-analysis/: SKILL.md
.agents/skills/premerge-accuracy-check/: SKILL.md
.agents/skills/torchtitan-npu-code-reviewer/: SKILL.md
.agents/skills/torchtitan-sync/: SKILL.md
.agents/skills/training-log-visualization/: SKILL.md
.ci/: lint.sh  setup_torchtitan.sh  smoke_test.sh  unit_test.sh
.claude/: settings.json
.codex/: hooks.json
.github/workflows/: sync-upstream.yml
.opencode/plugins/: bootstrap.ts
assets/: version.txt
docs/community/: contributors.md  governance.md  versioning_policy.md
docs/feature_guides/: checkpoint.md  deepseek_v32_mtp.md  low_precision_training.md  metrics_and_debugging.md  model_custom.md  muon_optimizer.md  npu_fused_ops.md  npu_tnd_attention.md  swap_optimizer.md  torch_compile.md  virtual_optimizer.md  vlm.md
docs/feature_guides/parallelism/: custom_cp.md
docs/recipe/: dsv4_sft.md  sft.md
docs/test_guides/: test_design.md  test_design_zh.md  test_guide.md  test_guide_zh.md
docs/user-guides/: cloud_platform_development_guide.md  installation.md  quickstart.md
scripts/: download_hf_assets.py  infer_server.py  parse_profiling_data.py  run_train.sh  run_train_deepseekv4.sh  run_train_multinodes.sh
scripts/checkpoint_conversion/: convert_to_hf.py
tests/smoke_tests/: config_registry.py  conftest.py  filter_smoke_log.py  integration_test.py
tests/smoke_tests/features/: _dsa_model_helpers.py  test_dsa.py  test_fusion_ops.py  test_gmm.py  test_li_loss.py  test_mhc_triton.py  test_permute.py  test_quant.py  test_rms_norm.py  test_rope.py  test_swap.py  test_virtual.py
tests/smoke_tests/model_parallel/: test_cp_ep.py  test_tp_ep.py
tests/smoke_tests/save_load/: base_save_load.py  test_qwen3_save_load.py
tests/testing/: parallel_dims.py
tests/unit_tests/: test_entry_compile.py
tests/unit_tests/converters/: test_model_custom_frame.py  test_moe_dispatch.py  test_npu_li.py  test_npu_sfa.py  test_npu_smla.py  test_npu_smla_cp_metadata.py  test_quant_converter.py  test_registry.py  test_rope.py
tests/unit_tests/distributed/: __init__.py  test_compressor_attention_cp.py
tests/unit_tests/functions/: test_config.py  test_convert_utils.py  test_validation.py  test_weight_utils.py
tests/unit_tests/models/: test_deepseek_v4_moe.py  test_deepseek_v4_parallelize_static.py  test_deepseek_v4_pp_static.py  test_deepseek_v4_state_dict_adapter.py  test_dsa_indexer_loss.py  test_multimodal_helpers.py  test_qwen3.py
tests/unit_tests/modules/: test_checkpoint.py  test_cp.py  test_deepseek_v4_cp.py  test_distributed.py  (+4 more)
torchtitan_npu/: __init__.py  entry.py  train.py
torchtitan_npu/config/: configs.py
torchtitan_npu/converters/: __init__.py  convert_utils.py  model_custom_interface.py  npu_converter.py  npu_registry.py  quant_converter.py  registry.py
torchtitan_npu/ops/: _grouped_mm.py
torchtitan_npu/tools/: checkpoint_patch.py  device.py  flight_recorder.py  profiling.py  weight_utils.py
(+137 files in other folders)
